--- a/style/body.css
+++ b/style/body.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("/bg.png");
+	background-image: url("/images/bg.png");
 	background-size: 120%;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
