--- a/style/body.css
+++ b/style/body.css
@@ -1,6 +1,6 @@
 body {
 	background-image: url("/images/bg.png");
-	background-size: 120%;
+	background-size: 110%;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
@@ -101,9 +101,10 @@ div {
 #welcomepage{
 	margin-top: 15%;
 	text-align: center;
-	color: white;
+	color: #778899;
 	font-size: 100px;
-	text-shadow: 3px 3px rgb(24, 24, 24);
+	text-shadow: 2px 2px rgb(24, 24, 24);
+	font-weight: bold;
 }
 
 /* signup */ 
@@ -125,7 +126,7 @@ div {
 #form {
 	height: 250px;
     width: 450px;
-    background-color: rgba(250, 200, 200, 0.45);
+    background-color: rgba(250, 200, 200, 0.8);
 	margin: 6% 20%;
 	font-family: "Open Sans",Helvetica,Arial,sans-serif;
     line-height: 150%;
@@ -133,23 +134,26 @@ div {
 	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.6);
 	font-size: 20px;
 	text-align: left;
-
 }
 
 
 /* feed */
 #scrollingfeed {
-	width: 500px;
-	margin-top: 6%;
+	width: 450px;
+	margin-top: 5%;
+	min-height: 450px;
 	scroll-behavior: smooth;
-	
+	overflow-y: auto;
+	border: white;
+	border-radius: 1px;
+	background-color: lightgrey;
 }
 
 
 /* home page after logged in */
 #canvas {
-	height: 500px;
-    width: 500px;
+	height: 450px;
+    width: 450px;
     background-color: white;
 	margin: 2% 20%;
     padding: 1px;
@@ -180,6 +184,6 @@ h2 {
 	margin-top: 20%;
 	text-align: right;
 	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-	color: lightgrey;
+	color: dimgrey;
 	position: relative;
 }
