--- a/style/body.css
+++ b/style/body.css
@@ -150,10 +150,10 @@ video {
 	position: relative;
 	z-index: 1;
 } 
-.canvas {
+canvas {
 	height: 500px;
-    width: 500px;
-    background-color: transparent;
+	width: 500px;
+	background-color: white;
 	padding: 5px;
 	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.6);
 } 
