--- a/style/body.css
+++ b/style/body.css
@@ -1,6 +1,6 @@
 /* over all */
 body {
-	background-image: url("/images/bg2.png");
+	background-image: url("/camagru/images/bg2.png");
 	background-color:white;
 	background-size: 180%;
 	background-attachment: fixed;
@@ -28,7 +28,7 @@ h2 {
 	opacity: 0.9;
 	color: #fff;
 	background-attachment: fixed;
-	background :linear-gradient(-60deg, #84aacf, 25%, rgba(0, 0, 0, 0) 40%), url('/images/instagram-background.png');
+	background :linear-gradient(-60deg, #84aacf, 25%, rgba(0, 0, 0, 0) 40%), url('/camagru/images/instagram-background.png');
 	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.6);
 }
 #logo {
