--- a/style/body.css
+++ b/style/body.css
@@ -2,9 +2,7 @@
 body {
 	background-image: url("/camagru/images/bg2.png");
 	background-color:white;
-	background-size: 180%;
-	background-attachment: fixed;
-	background-repeat: repeat;
+	background-size: cover;
 }
 div {
 	display: block;
@@ -29,6 +27,7 @@ h2 {
 	color: #fff;
 	background-attachment: fixed;
 	background :linear-gradient(-60deg, #84aacf, 25%, rgba(0, 0, 0, 0) 40%), url('/camagru/images/instagram-background.png');
+	background-size: cover;
 	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.6);
 }
 #logo {
