account updates done, working on forget pw and sending emails

--- a/style/body.css
+++ b/style/body.css
@@ -2,7 +2,7 @@
 body {
 	background-image: url("/camagru/images/bg2.png");
 	background-color:white;
-	background-size: cover;
+	background-size: contain;
 	background-position: fixed;
 }
 div {
