conpleted the mailing system with user confirmation/deletion/forgetpw and added the mygallery page for pictures of one user

--- a/style/body.css
+++ b/style/body.css
@@ -88,7 +88,7 @@ h2 {
 }
 
 /* page 404 */
-#errormsgbox {
+#msgbox {
 	height: 330px;
 	width: 800px;
 	margin-top: 20%;	
@@ -97,7 +97,7 @@ h2 {
 	opacity:0.85;
 	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.6);
 }
-#errorMessage, #nonewsfeed{
+#errorMessage, #nonewsfeed, #activeacc, #deletesuccess, #myemptygallery{
 	text-align: center;
 	color: #105497;
 	font-size: 35px;
@@ -231,11 +231,51 @@ canvas {
 	text-align: center;
 	opacity: 0.9;
 }
+.redbutton {
+	margin-top: 15px;
+	padding: 5px 25px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 15px;
+	color: white;
+	background-color:  #d65e64;
+	cursor: pointer;
+	text-align: center;
+	opacity: 0.9;
+}
 .gallery {
 	height: 300px;
 	width: 300px;
+	padding: 5px;
+	background-color: white;
 	margin: auto;	
 }
+.gallery_block {
+	height: 430px;
+	width: 310px;
+	background-color: white;
+	margin: auto;
+	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.6);
+}
+
+/* my gallery page */
+.mygallerypic {
+	height: 400px;
+	width: 400px;
+	padding: 5px;
+	background-color: white;
+	margin: auto;	
+}
+.mygallery {
+	height: 500px;
+	width: 410px;
+	background-color: white;
+	margin: auto;
+	margin-top: 15px;
+	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.6);
+}
+
 
 /* account info - change password/email/username */
 .accinfo {
