fixed the uploading system linked to the database

--- a/style/body.css
+++ b/style/body.css
@@ -1,6 +1,6 @@
 /* over all */
 body {
-	background-image: url("/camagru/images/bg2.png");
+	background-image: url("/camagru/images/bg.png");
 	background-color:white;
 	background-size: contain;
 	background-position: fixed;
